--- a/Brainf_ck-sharp.UWP/UserControls/Flyouts/UserGuide/Sections/LanguageIntroductionControl.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/Flyouts/UserGuide/Sections/LanguageIntroductionControl.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="Brainf_ck_sharp_UWP.UserControls.Flyouts.UserGuide.LanguageIntroductionControl"
+    x:Class="Brainf_ck_sharp_UWP.UserControls.Flyouts.UserGuide.Sections.LanguageIntroductionControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Brainf_ck_sharp_UWP.UserControls.Flyouts.UserGuide"
