--- a/Brainf_ck-sharp.UWP/UserControls/Flyouts/UserGuide/UserGuideViewerControl.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/Flyouts/UserGuide/UserGuideViewerControl.xaml
@@ -2,12 +2,13 @@
     x:Class="Brainf_ck_sharp_UWP.UserControls.Flyouts.UserGuide.UserGuideViewerControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Brainf_ck_sharp_UWP.UserControls.Flyouts.UserGuide"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:consoleMemoryViewer="using:Brainf_ck_sharp_UWP.Converters.ConsoleMemoryViewer"
     xmlns:jumpList="using:Brainf_ck_sharp_UWP.UserControls.DataTemplates.JumpList"
     xmlns:templateSelectors="using:Brainf_ck_sharp_UWP.TemplateSelectors"
+    xmlns:sections="using:Brainf_ck_sharp_UWP.UserControls.Flyouts.UserGuide.Sections"
+    xmlns:converters="using:Brainf_ck_sharp_UWP.Converters"
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400">
@@ -15,17 +16,17 @@
 
         <!--Introduction-->
         <DataTemplate x:Key="IntroductionSectionTemplate">
-            <local:LanguageIntroductionControl Margin="12,4,16,8"/>
+            <sections:LanguageIntroductionControl Margin="12,4,16,8"/>
         </DataTemplate>
 
         <!--Introduction-->
         <DataTemplate x:Key="CodeSamplesectionTemplate">
-            <local:CodeSamplesGuideControl Margin="12,4,16,8"/>
+            <sections:CodeSamplesGuideControl Margin="12,4,16,8"/>
         </DataTemplate>
 
         <!--Introduction-->
         <DataTemplate x:Key="PBrainSectionTemplate">
-            <local:PBrainGuideControl Margin="12,4,16,12"/>
+            <sections:PBrainGuideControl Margin="12,4,16,12"/>
         </DataTemplate>
 
         <!--Template selector-->
@@ -33,6 +34,7 @@
 
         <!--Headers converter-->
         <consoleMemoryViewer:ConsoleMemoryViewerSectionUppercaseNameConverter x:Key="UppercaseConverter"/>
+        <converters:UserGuideSectionDescriptionConverter x:Key="HeaderDescriptorConverter"/>
 
         <!--Header-->
         <DataTemplate x:Key="HeaderTemplate">
@@ -45,7 +47,7 @@
         <DataTemplate x:Key="ZoomedOutDefaultHeaderTemplate">
             <jumpList:JumpListZoomedOutHeaderTemplate
                 Title="{Binding Group.Key, Converter={StaticResource UppercaseConverter}}"
-                Description="{Binding Group.Key}"/>
+                Description="{Binding Group.Key, Converter={StaticResource HeaderDescriptorConverter}}"/>
         </DataTemplate>
     </UserControl.Resources>
 
@@ -55,6 +57,7 @@
 
             <!--ZoomedInView-->
             <ListView 
+                x:Name="SectionsList"
                 ItemsSource="{x:Bind ViewModel.View, Mode=OneWay}"
                 ItemContainerStyle="{StaticResource ListViewItemWithoutPointerVisualStates}"
                 HorizontalAlignment="Stretch"
